# pkg/faculty/faculty_entity.go
@@ -1,0 +1,14 @@
+package faculty
+
+import "time"
+
+type Entity struct {
+	Id        int
+	Name      string
+	CreatedAt time.Time
+	UpdatedAt time.Time
+}
+
+func (e *Entity) TableName() string {
+	return "faculties"
+}
