# pkg/faculty/faculty_handler.go
@@ -1,0 +1,98 @@
+package faculty
+
+import (
+	"github.com/labstack/echo/v4"
+	"mcm-api/config"
+	"mcm-api/pkg/apperror"
+	"mcm-api/pkg/middleware"
+	"net/http"
+	"strconv"
+)
+
+type Handler struct {
+	config  *config.Config
+	service *Service
+}
+
+func NewHandler(config *config.Config, service *Service) *Handler {
+	return &Handler{
+		config:  config,
+		service: service,
+	}
+}
+
+func (h *Handler) Register(group *echo.Group) {
+	group.Use(middleware.RequireAuthentication(h.config.JwtSecret))
+	group.GET("", h.index)
+	group.GET("/:id", h.getById)
+	group.POST("", h.create)
+	group.PUT(":id", h.update)
+	group.DELETE(":id", h.delete)
+}
+
+func (h *Handler) index(context echo.Context) error {
+	query := new(IndexQuery)
+	err := context.Bind(query)
+	if err != nil {
+		return apperror.HandleError(err, context)
+	}
+	paginateResponse, err := h.service.Find(context.Request().Context(), query)
+	if err != nil {
+		return apperror.HandleError(err, context)
+	}
+	return context.JSON(http.StatusOK, paginateResponse)
+}
+
+func (h *Handler) getById(context echo.Context) error {
+	id, err := strconv.Atoi(context.Get("id").(string))
+	if err != nil {
+		return err
+	}
+	result, err := h.service.FindById(context.Request().Context(), id)
+	if err != nil {
+		return apperror.HandleError(err, context)
+	}
+	return context.JSON(http.StatusOK, result)
+}
+
+func (h *Handler) create(context echo.Context) error {
+	body := new(FacultyCreateReq)
+	err := context.Bind(body)
+	if err != nil {
+		return apperror.HandleError(err, context)
+	}
+	result, err := h.service.Create(context.Request().Context(), body)
+	if err != nil {
+		return apperror.HandleError(err, context)
+	}
+	return context.JSON(http.StatusOK, result)
+}
+
+func (h *Handler) update(context echo.Context) error {
+	id, err := strconv.Atoi(context.Get("id").(string))
+	if err != nil {
+		return apperror.HandleError(err, context)
+	}
+	body := new(FacultyUpdateReq)
+	err = context.Bind(body)
+	if err != nil {
+		return apperror.HandleError(err, context)
+	}
+	result, err := h.service.Update(context.Request().Context(), id, body)
+	if err != nil {
+		return apperror.HandleError(err, context)
+	}
+	return context.JSON(http.StatusOK, result)
+}
+
+func (h *Handler) delete(context echo.Context) error {
+	id, err := strconv.Atoi(context.Get("id").(string))
+	if err != nil {
+		return apperror.HandleError(err, context)
+	}
+	err = h.service.Delete(context.Request().Context(), id)
+	if err != nil {
+		return apperror.HandleError(err, context)
+	}
+	return context.NoContent(http.StatusNoContent)
+}
