# pkg/user/user_handler.go
@@ -2,7 +2,6 @@ package user
 
 import (
 	"github.com/labstack/echo/v4"
-	middleware2 "github.com/labstack/echo/v4/middleware"
 	"mcm-api/config"
 	"mcm-api/pkg/apperror"
 	"mcm-api/pkg/common"
@@ -24,25 +23,46 @@ func NewUserHandler(config *config.Config, service *Service) *Handler {
 }
 
 func (h *Handler) Register(group *echo.Group) {
-	group.Use(middleware2.JWT([]byte(h.config.JwtSecret)))
-	group.Use(middleware.RequireAuthentication())
+	group.Use(middleware.RequireAuthentication(h.config.JwtSecret))
 	group.GET("", h.index)
 	group.GET("/:id", h.getById)
 	group.POST("", h.createUser)
+	group.PUT(":id", h.updateUser)
+	group.DELETE(":id", h.deleteUser)
 }
 
-// @Summary Show a account
-// @Description get string by ID
-// @ID get-string-by-int
+// @Tags Users
+// @Summary list users
+// @Description list users
 // @Accept  json
 // @Produce  json
-// @Param id path int true "Account ID"
-// @Success 200 {object} user.UserResponse
-// @Router /accounts/{id} [get]
-func (h *Handler) index(echo.Context) error {
-	return nil
+// @Param params query user.UserIndexQuery false "user index query"
+// @Success 200 {object} common.PaginateResponse{data=user.UserResponse}
+// @Security ApiKeyAuth
+// @Router /users [get]
+func (h *Handler) index(ctx echo.Context) error {
+	query := new(UserIndexQuery)
+	err := ctx.Bind(query)
+	if err != nil {
+		return err
+	}
+	loggedInUser := common.GetLoggedInUser(ctx)
+	paginateRes, err := h.service.Find(ctx.Request().Context(), loggedInUser, query)
+	if err != nil {
+		return apperror.HandleError(err, ctx)
+	}
+	return ctx.JSON(http.StatusOK, paginateRes)
 }
 
+// @Tags Users
+// @Summary Show a user
+// @Description get user by ID
+// @Accept  json
+// @Produce  json
+// @Param id path int true "User ID"
+// @Success 200 {object} user.UserResponse
+// @Security ApiKeyAuth
+// @Router /users/{id} [get]
 func (h *Handler) getById(ctx echo.Context) error {
 	id, err := strconv.Atoi(ctx.Param("id"))
 	if err != nil {
@@ -57,6 +77,15 @@ func (h *Handler) getById(ctx echo.Context) error {
 	return ctx.JSON(http.StatusOK, res)
 }
 
+// @Tags Users
+// @Summary Create a user
+// @Description Create a user
+// @Accept  json
+// @Produce  json
+// @Param user body user.UserCreateReq true "create user"
+// @Success 200 {object} user.UserResponse
+// @Security ApiKeyAuth
+// @Router /users [post]
 func (h Handler) createUser(ctx echo.Context) error {
 	loggedInUser := common.GetLoggedInUser(ctx)
 	req := &UserCreateReq{}
@@ -69,4 +98,31 @@ func (h Handler) createUser(ctx echo.Context) error {
 		return apperror.HandleError(err, ctx)
 	}
 	return ctx.JSON(http.StatusOK, userResponse)
+}
+
+// @Tags Users
+// @Summary Create a user
+// @Description Create a user
+// @Accept  json
+// @Produce  json
+// @Param id path int true "User ID"
+// @Param user body user.UserCreateReq true "create user"
+// @Success 200 {object} user.UserResponse
+// @Security ApiKeyAuth
+// @Router /users/{id} [put]
+func (h Handler) updateUser(ctx echo.Context) error {
+	return nil
+}
+
+// @Tags Users
+// @Summary Delete a user
+// @Description Delete a user
+// @Accept  json
+// @Produce  json
+// @Param id path int true "User ID"
+// @Success 200
+// @Security ApiKeyAuth
+// @Router /users/{id} [delete]
+func (h Handler) deleteUser(ctx echo.Context) error {
+	return nil
 }
